ndb - bug#15695 bug#16447 bug#18612   For various reasone have a partitioned cluster been created   This patch makes sure that when they connect   1) it's detected   2) shutdown is forced